# dify-rag-agent

./: .gitignore  README.md  debug_expansion.py  debug_hybrid.py  debug_retrieval.py  eval_dataset.py  eval_rag.py  hybrid_retriever.py  main.py  pyproject.toml  text_cleaner.py
dify_rag/: __init__.py  bge_reranker.py  cache.py  config.py  embedding.py  hybrid_retriever.py  hyde_generator.py  llm.py  meta_filter.py  rag.py  retrieval.py  text_cleaner.py  vectorstore.py
dify_rag/eval/: __init__.py  dataset.py  engine.py
scripts/: check_top30.py  compare_chunks.py  debug_expansion.py  debug_failures.py  debug_failures2.py  debug_hybrid.py  debug_phase3.py  debug_retrieval.py  diagnose_clean.py  diagnose_step_by_step.py  scan_components.py  test_all_fixes.py  verify_issues.py
