[project]
name = "dify-rag-agent"
version = "0.1.0"
description = "基于 Dify 中文文档的 RAG Agent (LangChain)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "optional>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
eval = []
# BGE Reranker (需要 torch + transformers, ~2GB 模型下载)
# 不装也能跑 —— 自动降级为 LLM 打分
reranker = [
    "FlagEmbedding>=1.2.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["dify_rag*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
